# FJ-Ker

./: .gitignore  IMPLEMENTATION_PLAN.md
docs/: SMOKE_TEST.md  Ubuntu_26_04_一键部署.md  Windows_Server_2025_一键部署.md  Windows_Server_公网部署.md  使用说明.md
firmware/: .gitignore  platformio.ini
firmware/include/: config.h  pins.h  secrets.h.example
firmware/src/: app.cpp  app.h  battery.cpp  battery.h  buttons.cpp  buttons.h  camera.cpp  camera.h  diagnostics.cpp  diagnostics.h  display.cpp  display.h  display_test.cpp  display_test.h  dither.cpp  dither.h  main.cpp  net_client.cpp  net_client.h  page_store.cpp  page_store.h  ui.h  ui_answer.cpp  ui_error.cpp  ui_preview.cpp  ui_splash.cpp  ui_uploading.cpp
firmware/test/: run_native_tests.ps1
firmware/test/test_native/: test_app_state.cpp  test_diagnostics.cpp  test_dither.cpp  test_page_store.cpp
server/: .env.example  deploy_ubuntu_26_04.sh  deploy_windows_server_2025.ps1  install.ps1  pyproject.toml  run.ps1  run_ubuntu.sh
server/app/: __init__.py  jobs.py  llm_qwen.py  main.py  render.py  settings.py
server/app/fonts/: README.md
server/app/templates/: answer.html.j2  style.css
server/tests/: test_protocol.py  test_render.py  test_settings.py
tools/: download_job_pages.ps1
