[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fj-ker-server"
version = "0.1.0"
description = "FJ-ker 的 PC 渲染和 Qwen 视觉服务端"
requires-python = ">=3.11,<3.15"
dependencies = [
    "dashscope>=1.20.0",
    "fastapi>=0.111.0",
    "jinja2>=3.1.0",
    "markdown>=3.6",
    "pillow>=10.0.0",
    "playwright>=1.45.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
